@@ -1,24 +1,0 @@
-/*
- * dump-mosy.h --
- *
- *      Operations to dump MOSY module information.
- *
- * Copyright (c) 1999 Frank Strauss, Technical University of Braunschweig.
- * Copyright (c) 1999 J. Schoenwaelder, Technical University of Braunschweig.
- *
- * See the file "COPYING" for information on usage and redistribution
- * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
- *
- * @(#) $Id$
- */
-
-#ifndef _DUMP_MOSY_H
-#define _DUMP_MOSY_H
-
-
-
-extern int dumpMosy(const char *modulename);
-
-
-
-#endif /* _DUMP_MOSY_H */
